Changed project to use Eclipse collections.  Refactored scoreboard into two parts:  Aggregators, and Scoreboards.  Made loading language-independent